force-app/main/default/objects/ACME_LeadScore__c/ACME_LeadScore__c.object-meta.xml
<CustomObject>
    <label>Lead Score</label>
    <pluralLabel>Lead Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>