force-app/main/default/objects/ACME_LeadScore__c/fields/EngagementPoints__c.field-meta.xml
<CustomField>
    <fullName>EngagementPoints__c</fullName>
    <label>Engagement Points</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>