force-app/main/default/objects/ACME_LeadScore__c/fields/LastCalculated__c.field-meta.xml
<CustomField>
    <fullName>LastCalculated__c</fullName>
    <label>Last Calculated</label>
    <type>DateTime</type>
</CustomField>