force-app/main/default/objects/ACME_LeadScore__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Scores</relationshipLabel>
    <relationshipName>LeadScores</relationshipName>
</CustomField>